// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current user actions change password 1`] = `
Array [
  Object {
    "type": "CHANGE_PASSWORD_START",
  },
  Object {
    "resp": Object {
      "new_password": "newPassword",
      "old_password": "password",
    },
    "type": "CHANGE_PASSWORD_SUCCESS",
  },
]
`;

exports[`current user actions submit setting creation 1`] = `
Array [
  Object {
    "settingType": "macro",
    "type": "SUBMIT_SETTING_START",
  },
  Object {
    "isUpdate": false,
    "resp": Object {
      "data": Object {},
      "hello": "world",
      "type": "macro",
    },
    "settingType": "macro",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions submit setting should update available status and fetch chats 1`] = `
Array [
  Object {
    "settingType": "preferences",
    "type": "SUBMIT_SETTING_START",
  },
  Object {
    "isUpdate": false,
    "resp": Object {
      "data": Object {
        "available": false,
      },
      "type": "preferences",
    },
    "settingType": "preferences",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
  Object {
    "tickets": Array [
      Object {
        "id": 1,
      },
    ],
    "type": "SET_CHATS",
  },
]
`;

exports[`current user actions submit setting update 1`] = `
Array [
  Object {
    "settingType": "macro",
    "type": "SUBMIT_SETTING_START",
  },
  Object {
    "isUpdate": true,
    "resp": Object {
      "data": Object {},
      "hello": "world",
      "id": 1,
      "type": "macro",
    },
    "settingType": "macro",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions submitSettingSuccess should dispatch the next setting 1`] = `
Array [
  Object {
    "isUpdate": true,
    "resp": Object {
      "data": Object {
        "1": Object {
          "display_order": 2,
          "hide": false,
        },
      },
      "id": 1,
      "type": "ticket-views",
    },
    "settingType": "ticket-views",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;
